add hi word in para

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Welcome to Git</title>
 <h1>This is sample<h1>
-<p>This is sample program</p>
+<p>Hi,I hope this is sample program</p>
 </html>
 
